fix: made headers not wrap at all :)

--- a/src/App.css
+++ b/src/App.css
@@ -60,6 +60,7 @@ hr.hr-text::before {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    white-space: nowrap;
 }
 
 .App-header {
